# octaneRobotPlugin

./: .gitignore  README.md  pyproject.toml
examples/: tagged_suite.robot
src/octane_robot_plugin/: config.py  errors.py  listener.py
src/octane_robot_plugin_embiti/: __init__.py  config.py  diagnostics.py  listener.py  mapping.py  octane_client.py  tags.py  test_results.py  test_results_listener.py  version.py
tests/: test_listener.py  test_mapping.py  test_octane_client.py  test_tags.py  test_test_results.py  test_test_results_listener.py
