[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "octane-robot-plugin-embiti"
version = "1.0.1"
description = "Robot Framework listener that syncs tagged test results to ALM Octane suite-run child runs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "robotframework>=6.1",
]

[project.optional-dependencies]
test = []

[tool.setuptools.packages.find]
where = ["src"]
